# cogno

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  ECONOMICS.md  LICENSE  NOTICE  PLAN.md  POLICY.md  README.md  SECURITY.md  deny.toml  rust-toolchain.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  deploy-app.yml  deploy-node.yml  maintenance-canary.yml  maintenance.yml
app/: .env.example  .eslintrc.json  .gitignore  README.md  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  tsconfig.json  vitest.config.ts
app/.papi/: polkadot-api.json
app/public/: OFL-1.1.txt  third-party-licenses.txt
app/scripts/: check-spec.mjs  check-tokens.mjs  d1-acceptance.mjs  d1-bind-funding-acceptance.mjs  e2e-m2.mjs  e2e-m2c.mjs  e2e-m7-browse.mjs  e2e.mjs  gen-licenses.mjs  grant-weight.mjs  m2-acceptance.mjs  m2-cip8-fixture.mjs  m2-cip8-stake-fixture.mjs  m2-follower-e2e.mjs  m2c-acceptance.mjs  m2d-beacon.mjs  m2d-bind.mjs  m2d-lock.mjs  m2d-post.mjs  m2d-sync-weight.mjs  m2d-unlock.mjs  m2d-wallet.mjs  m4-seed-finish.mjs  m4-seed.mjs  papi-acceptance.mjs  smoke-export.mjs  submit-link.mjs  verify-account-votes.mjs
app/src/app/: error.tsx  (+6 more)
chainspecs/: README.md  cogno-raw.json  preprod.raw.json
ci/cip8-oracle/: README.md  beacon.py  payload.py  requirements.txt  role_payload.py  test_agreement.py  test_beacon.py  test_role_payload.py  verify.py
cli/: Cargo.toml
cli/src/: calls.rs  committee.rs  identity.rs  key.rs  main.rs  query.rs  rpc.rs  tx.rs
cogno-dbsync/: Cargo.toml
cogno-dbsync/src/: calidus.rs  dbsync.rs  lib.rs  reduction.rs
cogno-dbsync/src/calidus/: tests.rs
cogno-dbsync/src/fixtures/: observation-equivalence.json
cogno-keyfile/: Cargo.toml
cogno-keyfile/src/: lib.rs
contracts/: .gitignore  README.md  aiken.toml  plutus.json
contracts/audits/: audit-report-07-17-26.md  audit-report-2026-06-17.md
contracts/lib/: types.ak  util.ak  validate.ak
contracts/scripts/: regen-vault.mjs
contracts/validators/: talk_vault.ak
deploy/: README.md
deploy/maintenance/: index.html
deploy/monitoring/: README.md  alertmanager.yml  alerts.yml  grafana-dashboard.json  prometheus.yml
deploy/nginx/: cogno.conf  maintenance.conf  security-headers.conf
deploy/scripts/: cogno-deploy-node
deploy/sudoers.d/: cogno-deploy
deploy/systemd/: cogno-follower.service  cogno-indexer.service  cogno-node.service  cogno-query.service  cogno-relay.service  cogno-relayer.service  cogno.env.example  journald-cogno.conf
docs/: ARCHITECTURE.md  CLIENT-SIDE-RANKING.md  D2-custody-runbook.md  DECISION-REGISTER.md  DYNAMIC-STAKE-VOTING-PLAN.md  ECONOMICS.md  FORK-PLAN.md  IN-PROTOCOL-OBSERVATION.md  L1-cardano.md  L2-follower.md  L3-SPO-graduation.md  L3-chain.md  L4-reading.md  L5-frontend.md  LOCAL-FRONTEND.md  M0-build.md  M1-build.md  M2-build.md  M2c-build.md  M2d-build.md  M3-build.md  M4-build.md  M5-build.md  M6-build.md  M7-ops.md  M8-relaunch.md  PLAN.md  PREPROD-BRINGUP.md  PRODUCTION-HARDENING.md  PROTOCOL-PARAMS.md  README.md  RELAY-NODE.md  SCALE-NODE-READS.md  TRUSTLESS-IDENTITY.md  UPGRADES.md  VERIFIABLE-ROLE-TAGS.md
docs/frontend-spec/: 00-overview.md  01-information-architecture.md  02-design-system.md  03-component-library.md  04-data-layer.md  05-divergences-and-constraints.md  06-surface-home.md  07-surface-profile.md  08-surface-thread.md  09-surface-compose.md  10-surface-explore-search.md  11-surface-onboarding-auth.md  12-surface-settings.md  README.md
node/: Cargo.toml
node/src/: benchmarking.rs  cardano_observer.rs  chain_spec.rs  cli.rs  command.rs  config_check.rs  dbsync.rs  gen_chainspec.rs  key.rs  main.rs  metrics.rs  rpc.rs  service.rs
node/src/consensus/: block_proposal.rs  cardano_digest.rs  inherent_digest.rs  mod.rs
pallets/anchor/: Cargo.toml
pallets/anchor/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/cardano-observer/: Cargo.toml
pallets/cardano-observer/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/cardano-roles/: Cargo.toml
pallets/cardano-roles/src/: lib.rs  migrations.rs  mock.rs  tests.rs  weights.rs
pallets/cogno-gate/: Cargo.toml
pallets/cogno-gate/src/: benchmarking.rs  cip8.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/cogno-gate/src/cip8/: tests.rs
pallets/governance-fuel/: Cargo.toml
pallets/governance-fuel/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/governed-upgrade/: Cargo.toml
pallets/governed-upgrade/src/: lib.rs  mock.rs  tests.rs  weights.rs
pallets/microblog/: Cargo.toml  README.md
pallets/microblog/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/microblog/src/migrations/: mod.rs  v1.rs  v2.rs  v3.rs  v4.rs  v5.rs  v6.rs  v7.rs  v8.rs  v9.rs
pallets/profile/: Cargo.toml
pallets/profile/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/profile/src/migrations/: mod.rs  v1.rs
pallets/talk-stake/: Cargo.toml
pallets/talk-stake/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/validator-set/: Cargo.toml
pallets/validator-set/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
runtime/: Cargo.toml
runtime/src/: apis.rs  benchmarks.rs  genesis_config_presets.rs  lib.rs
runtime/src/configs/: mod.rs
scripts/: fetch-chainspec.mjs  gen-chainspec.mjs  run-tracking-node.sh
scripts/acceptance/: acceptance.mjs  package-lock.json  package.json
services/_shared/: __ismain_selfcheck.mjs  cli.mjs  gen-equivalence-fixtures.mjs  keys.mjs  metrics.mjs  net.mjs  observation-equivalence.test.mjs  observation.mjs  observation.test.mjs  paths.mjs  shared.test.mjs
services/anchor-relayer/: README.md  lib.mjs  package.json  relayer.mjs  relayer.test.mjs  verify.mjs
services/cogno-follower/: README.md  beacon.py  follower.py  payload.py  requirements.txt  run.sh  test_agreement.py  test_beacon.py  test_http.py  test_vault.py  vault.py  verify.py
(+477 files in other folders)
