# cogno-chain — Rust workspace (M0 scaffold)
#
# Forked from the polkadot-sdk `templates/solochain` at tag polkadot-stable2603-3
# (commit e3737178ec726cffe506c907263aaaa417893fd0). Dependency versions below are the
# exact crates.io versions that ship in that release (harvested from the tag's Cargo.lock).
# Pin is locked further by the committed Cargo.lock. See docs/M0-build.md (DR-03).
[workspace]
resolver = "2"
members = [
	"node",
	"runtime",
	# The all-Rust operator/committee admin CLI (the cardano-cli analogue to the node daemon): typed
	# RuntimeCall constructors + committee-governed writes, keys BY FILE PATH. Reuses the runtime's own
	# on-wire types (RuntimeCall/TxExtension) so a call-index/extension change fails to COMPILE.
	"cli",
	# Shared no-node crates (the all-Rust consolidation): the deterministic Cardano db-sync reader +
	# reduction used by the node observation inherent (the sole writer), and the cardano-cli-style key-file
	# format used by the CLI signer + node gen-chainspec / key insert.
	"cogno-dbsync",
	"cogno-keyfile",
	"pallets/microblog",
	"pallets/talk-stake",
	"pallets/cogno-gate",
	"pallets/profile",
	"pallets/validator-set",
	"pallets/cardano-observer",
	# Sudo-free governance: the committee-governed runtime-upgrade authorizer (fills the vacant index 7).
	"pallets/governed-upgrade",
]

[workspace.package]
authors = ["LogicalMechanism <support@logicalmechanism.io>"]
edition = "2021"
homepage = "https://github.com/LogicalMechanism/cogno-chain"
repository = "https://github.com/LogicalMechanism/cogno-chain"
license = "Apache-2.0"

[workspace.lints.rust]
unused_extern_crates = "allow"

[workspace.dependencies]
# ── local crates ───────────────────────────────────────────────────────────────
cogno-chain-runtime = { path = "runtime", default-features = false }
pallet-microblog = { path = "pallets/microblog", default-features = false }
pallet-talk-stake = { path = "pallets/talk-stake", default-features = false }
pallet-cogno-gate = { path = "pallets/cogno-gate", default-features = false }
# Twitter-like social-actions branch: mutable per-account display profile (name/bio/avatar),
# identity-gated via the microblog IsAllowed trait.
pallet-profile = { path = "pallets/profile", default-features = false }
# M6 (DR-26): the MUTABLE Aura+GRANDPA validator set — vendor-forked from
# gautamdhameja/substrate-validator-set, drives pallet-session's SessionManager.
pallet-validator-set = { path = "pallets/validator-set", default-features = false }
# in-protocol-observation (D4): sets talk-stake weight from a consensus-verified Cardano inherent.
pallet-cardano-observer = { path = "pallets/cardano-observer", default-features = false }
# Sudo-free governance: committee-authorized runtime upgrades (AuthorityOrigin-gated authorize_upgrade +
# the permissionless frame_system::apply_authorized_upgrade). No sudo, no set_storage — least privilege.
pallet-governed-upgrade = { path = "pallets/governed-upgrade", default-features = false }
# The shared no-node deterministic Cardano db-sync reader + reduction (std-only). The node observation
# inherent is the sole reader/writer; the CLI reads chain state over RPC only (no db-sync dependency).
cogno-dbsync = { path = "cogno-dbsync" }
# The shared cardano-cli-style key-file format (secret keys BY FILE PATH, never seed phrases).
cogno-keyfile = { path = "cogno-keyfile" }

# ── codec / type info ──────────────────────────────────────────────────────────
codec = { package = "parity-scale-codec", version = "3.7.5", default-features = false }
scale-info = { version = "2.11.6", default-features = false }

# ── logging ──────────────────────────────────────────────────────────────────
# `log` facade for node-operator-visible diagnostics on the error/edge paths in the
# pallets (M10). no_std-compatible (default-features = false); each pallet adds
# "log/std" to its own std feature. Pinned to the version already in Cargo.lock.
log = { version = "0.4.22", default-features = false }

# ── external (node, std-only) ──────────────────────────────────────────────────
clap = { version = "4.5.48" }
futures = { version = "0.3.31" }
jsonrpsee = { version = "0.24.10" }
serde_json = { version = "1.0.132", default-features = false }

# ── FRAME ──────────────────────────────────────────────────────────────────────
frame-benchmarking = { version = "46.0.0", default-features = false }
frame-benchmarking-cli = { version = "54.0.0", default-features = false }
frame-executive = { version = "46.0.0", default-features = false }
frame-metadata-hash-extension = { version = "0.14.0", default-features = false }
frame-support = { version = "46.0.1", default-features = false }
frame-system = { version = "46.0.0", default-features = false }
frame-system-benchmarking = { version = "46.0.0", default-features = false }
frame-system-rpc-runtime-api = { version = "41.0.0", default-features = false }
frame-try-runtime = { version = "0.52.0", default-features = false }

# ── pallets (stock) ────────────────────────────────────────────────────────────
pallet-aura = { version = "45.0.0", default-features = false }
pallet-balances = { version = "47.0.0", default-features = false }
# DR-07: the mutable k-of-t committee backing the crown-jewel origins (M5).
pallet-collective = { version = "46.0.0", default-features = false }
pallet-grandpa = { version = "46.0.0", default-features = false }
# M6 (DR-26): mutable authorities — pallet-session rotates Aura+GRANDPA from the validator-set
# pallet's SessionManager each session, instead of from static genesis.
pallet-session = { version = "46.0.0", default-features = false }
pallet-skip-feeless-payment = { version = "21.0.0", default-features = false }
pallet-sudo = { version = "46.0.0", default-features = false }
pallet-timestamp = { version = "45.0.0", default-features = false }
pallet-transaction-payment = { version = "46.0.0", default-features = false }
pallet-transaction-payment-rpc = { version = "49.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "46.0.0", default-features = false }

# ── client (sc-*) ──────────────────────────────────────────────────────────────
sc-basic-authorship = { version = "0.54.0", default-features = false }
sc-cli = { version = "0.58.0", default-features = false }
sc-client-api = { version = "45.0.0", default-features = false }
sc-consensus = { version = "0.55.0", default-features = false }
sc-consensus-aura = { version = "0.56.0", default-features = false }
sc-consensus-grandpa = { version = "0.41.0", default-features = false }
sc-executor = { version = "0.48.0", default-features = false }
# `key insert-file`: open the LocalKeystore + insert a session secret read (by file path) from a
# cogno-keyfile envelope — the file-path analogue of the SDK's `--suri` `key insert`.
sc-keystore = { version = "40.0.0", default-features = false }
sc-network = { version = "0.56.1", default-features = false }
sc-offchain = { version = "51.0.0", default-features = false }
sc-service = { version = "0.57.0", default-features = false }
sc-telemetry = { version = "30.0.1", default-features = false }
sc-transaction-pool = { version = "45.0.0", default-features = false }
sc-transaction-pool-api = { version = "44.0.0", default-features = false }

# ── primitives (sp-*) ──────────────────────────────────────────────────────────
sp-api = { version = "41.0.0", default-features = false }
sp-block-builder = { version = "41.0.0", default-features = false }
sp-blockchain = { version = "44.0.0", default-features = false }
sp-consensus = { version = "0.47.0", default-features = false }
sp-consensus-aura = { version = "0.49.0", default-features = false }
sp-consensus-grandpa = { version = "28.0.0", default-features = false }
sp-core = { version = "40.0.0", default-features = false }
sp-genesis-builder = { version = "0.22.0", default-features = false }
sp-inherents = { version = "41.0.0", default-features = false }
sp-io = { version = "45.0.0", default-features = false }
sp-keyring = { version = "46.0.0", default-features = false }
# `key insert-file`: the Keystore trait + KeystorePtr the file-based session-key insert writes through.
sp-keystore = { version = "0.46.0", default-features = false }
sp-offchain = { version = "41.0.0", default-features = false }
sp-runtime = { version = "46.0.0", default-features = false }
sp-session = { version = "43.0.0", default-features = false }
# M6: sp-staking offence types — the dormant im-online ReportOffence sink in pallet-validator-set.
sp-staking = { version = "43.0.0", default-features = false }
sp-storage = { version = "23.0.0", default-features = false }
sp-timestamp = { version = "41.0.0", default-features = false }
sp-transaction-pool = { version = "41.0.0", default-features = false }
sp-version = { version = "44.0.0", default-features = false }

# ── substrate build/rpc utils ──────────────────────────────────────────────────
substrate-build-script-utils = { version = "11.0.0" }
substrate-frame-rpc-system = { version = "50.0.0", default-features = false }
substrate-wasm-builder = { version = "32.0.0", default-features = false }
# The Prometheus endpoint the SDK's built-in `substrate_*` metrics register on — the node registers its
# own `cogno_observer_*` observer-liveness gauges on the same `config.prometheus_registry()`.
substrate-prometheus-endpoint = { version = "0.17.7", default-features = false }
