[package]
name = "cogno-dbsync"
description = "The shared deterministic Cardano db-sync reader + node-keyed reduction for cogno-chain. Used by the node observation InherentDataProvider (the WRITER of the talk-stake weight ledger) and, read-only, by the cogno-chain-cli `query weight --dbsync` diagnostic. Pinned by the golden observation-equivalence fixture so both produce byte-identical observations. Folds the former node/src/dbsync.rs + node/src/cardano_observer.rs (pure half) + services/_shared/observation.mjs + services/cogno-follower/vault.py into ONE std-only crate."
version = "1.0.0"
license = "Apache-2.0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lints]
workspace = true

[dependencies]
# Cardano is read EXCLUSIVELY through db-sync (consensus-critical determinism). `tokio` drives the async
# pg client (bounded by an internal 2 s timeout); these are the ONLY heavy deps the reader needs — no
# `sc-*`, no runtime, no node binary — so the CLI can reuse it read-only without becoming a node. NoTls:
# cogno_reader is a read-only role on a private-LAN db-sync (TLS is a MAINNET PREREQUISITE).
tokio = { version = "1", default-features = false, features = ["rt", "time", "sync"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
# The db-sync SQL emits the vault UTxOs as json_agg; the reduction consumes that JSON byte-identically to
# observation.mjs — so serde_json is a real (non-dev) dependency of both halves.
serde_json = { features = ["std"], workspace = true }
# SCALE encode of the reduced records + the candidate-set commitment pre-image.
codec = { features = ["std"], workspace = true }
# `sp_core::hashing::blake2_256` for the inputs_commitment (the Mismatch-vs-ComputeDiverged basis).
sp-core = { default-features = true, workspace = true }
# `BeaconName`/`StakeCredential`/`CardanoObservation`/`CardanoRef` — the node-keyed on-wire observation
# types the reduced records produce (std for the native host build).
pallet-cardano-observer = { features = ["std"], workspace = true }
# Operator-visible db-sync connection diagnostics (the reconnect edge).
log = { workspace = true }
