[package]
name = "cogno-keyfile"
description = "The shared cogno-chain key-file format — cardano-cli-style secret keys linked BY FILE PATH (never seed phrases). The single source of the JSON envelope { type, scheme, ss58, secretHex } + its load/recompute/dev-key-denylist logic, used by both the cogno-chain-cli (writer/signer) and the cogno-chain-node `gen-chainspec` (reader of operator public keys) + `key insert-file` (reader of the session secret). std-only; no sc-*/runtime deps."
version = "1.0.0"
license = "Apache-2.0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lints]
workspace = true

[dependencies]
anyhow = "1"
hex = "0.4"
zeroize = { version = "1", features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
serde_json = { workspace = true, features = ["std"] }
sp-core = { default-features = true, workspace = true }
sp-runtime = { default-features = true, workspace = true }

[dev-dependencies]
# Re-derives the well-known dev-key denylist from `//Alice..//Ferdie` in a unit test, so a future
# sp-core derivation change fails CI rather than silently weakening the prod dev-key refusal.
sp-keyring = { default-features = true, workspace = true }
