[package]
name = "cogno-chain-node"
description = "The cogno-chain solochain node (forked from polkadot-sdk solochain-template @ stable2603-3)."
version = "0.1.0"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lints]
workspace = true

[dependencies]
clap = { features = ["derive"], workspace = true }
# in-protocol-observation (D4): the node-side Cardano observation InherentDataProvider.
async-trait = "0.1"
log = { workspace = true }
codec = { features = ["std"], workspace = true }
serde_json = { features = ["std"], workspace = true }
pallet-cardano-observer = { features = ["std"], workspace = true }
# async HTTP for the per-node Kupo read (localhost http — no TLS backend needed). The fetch is bounded
# by an in-IDP timeout so a slow/down Kupo can't stall authoring/import (fail-closed → empty observation).
reqwest = { version = "0.12", default-features = false }
frame-benchmarking-cli = { default-features = true, workspace = true }
frame-metadata-hash-extension = { default-features = true, workspace = true }
frame-system = { default-features = true, workspace = true }
futures = { features = ["thread-pool"], workspace = true }
jsonrpsee = { features = ["server"], workspace = true }
pallet-microblog = { default-features = true, workspace = true }
pallet-skip-feeless-payment = { default-features = true, workspace = true }
pallet-transaction-payment = { default-features = true, workspace = true }
pallet-transaction-payment-rpc = { default-features = true, workspace = true }
sc-basic-authorship = { default-features = true, workspace = true }
sc-cli = { default-features = true, workspace = true }
sc-client-api = { default-features = true, workspace = true }
sc-consensus = { default-features = true, workspace = true }
sc-consensus-aura = { default-features = true, workspace = true }
sc-consensus-grandpa = { default-features = true, workspace = true }
sc-executor = { default-features = true, workspace = true }
sc-network = { default-features = true, workspace = true }
sc-offchain = { default-features = true, workspace = true }
sc-service = { default-features = true, workspace = true }
sc-telemetry = { default-features = true, workspace = true }
sc-transaction-pool = { default-features = true, workspace = true }
sc-transaction-pool-api = { default-features = true, workspace = true }
cogno-chain-runtime = { workspace = true }
sp-api = { default-features = true, workspace = true }
sp-block-builder = { default-features = true, workspace = true }
sp-blockchain = { default-features = true, workspace = true }
sp-consensus = { default-features = true, workspace = true }
sp-consensus-aura = { default-features = true, workspace = true }
sp-core = { default-features = true, workspace = true }
sp-genesis-builder = { default-features = true, workspace = true }
sp-inherents = { default-features = true, workspace = true }
sp-io = { default-features = true, workspace = true }
sp-keyring = { default-features = true, workspace = true }
sp-runtime = { default-features = true, workspace = true }
sp-timestamp = { default-features = true, workspace = true }
substrate-frame-rpc-system = { default-features = true, workspace = true }

[build-dependencies]
substrate-build-script-utils = { default-features = true, workspace = true }

[features]
default = ["std"]
std = ["cogno-chain-runtime/std"]
# Dependencies that are only required if runtime benchmarking should be build.
runtime-benchmarks = [
	"frame-benchmarking-cli/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-transaction-payment/runtime-benchmarks",
	"sc-service/runtime-benchmarks",
	"cogno-chain-runtime/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.
try-runtime = [
	"frame-system/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"cogno-chain-runtime/try-runtime",
	"sp-runtime/try-runtime",
]
